--- a/sprint-app-backend/package.json
+++ b/sprint-app-backend/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.2",
+    "bcrypt": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
